2016-12-20      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.4.9
        * anonymine_engine.py (game_engine.play_game): "time taken to play"
            was calculated after the "Press the any key" screen.

2016-12-19      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.4.8
        * configure.py, Makefile.static, INSTALL: Don't install modules
            for the other Python version. Removed $(MODULES_OTHERVER).
        * Makefile.static (build-freedesktop, build-macosx): Use Makefile as
            a Makefile.
        * Makefile.static (all etc), mk-symlinks: New file mk-symlinks that
            creates $(builddir)symlinks which creates the symlinks using a
            new method.
        * configure, configure.py, Makefile.static ($(MAIN_STAGE)), INSTALL:
            Use PyPy is possible; New Makefile variable: $(python);
            ./reconfigure will use sys.executable.

2016-12-18      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.4.7
        * Makefile.static:
            - Use "$(MAKE)" instead of "make".
            - Made print-destinations print to stderr.
        * configure.py: Remade find_MODULES.
        * INSTALL: Many small corrections.
        * Makefile.static:
            - Made recursive make wrapper for install-dirs
            - `make install` depends on the internal targets.
              (Avoids unnecessary recursions.)
            - $(MAIN_STAGE) now depends on Makefile.vars too.
            - $(ENGINECFG_STAGE) now depends on Makefile.vars.
        * RELEASE-NOTES: Inform that 0.4.5 and 0.4.6 didn't fix issues
            #16 and #17 properly.

2016-12-16      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.4.6
        *: The fix for #17 didn't work, make kept running the old Makefile.
    0.4.5
        * README: Corrected RAM usage.
        * Makefile.static: "install" depends on "all", Makefile will be
            automatically regenerated.
        * configure.py: