@@ -95,6 +95,7 @@
         # traditional fields:   ':moore',       ':square',      ''
         #
         # Properties:
+        #       '1', '2', '3', '4', '5', '6', '7'
         #       'flag'
         #       'free' (unclicked)
         #       'number'
@@ -137,10 +138,17 @@
        #                         foreground           attributes
        #key                character        background
         'text':           (None, "BLACK",   "WHITE",  curses.A_NORMAL),
-        'flag':           ('F',  "GREEN",   "BLUE",   curses.A_REVERSE),
+        'flag':           ('F',  "GREEN",   "BLUE",   curses.A_REVERSE|curses.A_DIM),
         'free':           ('.',  "BLUE",    "BLUE",   curses.A_NORMAL),
         'number':         (None, "WHITE",   "BLUE",   curses.A_BOLD),
-        'zero':           ('-',  "WHITE",   "BLUE",   curses.A_BOLD),
+        '1':              ('1',  "RED",     "BLUE",   curses.A_BOLD),
+        '2':              ('2',  "YELLOW",  "BLUE",   curses.A_BOLD),
+        '3':              ('3',  "GREEN",   "BLUE",   curses.A_BOLD),
+        '4':              ('4',  "WHITE",   "BLUE",   curses.A_BOLD),
+        '5':              ('5',  "GREEN",   "BLUE",   curses.A_BOLD),
+        '6':              ('6',  "YELLOW",  "BLUE",   curses.A_BOLD),
+        '7':              ('7',  "RED",     "BLUE",   curses.A_BOLD),
+        'zero':           ('-',  "WHITE",   "BLUE",   curses.A_DIM),
         'mine':           ('X',  "WHITE",   "RED",    curses.A_BOLD),
         'cursor-l':       ('>',  "WHITE",   "BLUE",   curses.A_BOLD),
         'cursor-r':       ('<',  "WHITE",   "BLUE",   curses.A_BOLD),
